(env
  (dev
    (js_of_ocaml
      (flags (:standard --debug-info --no-inline --source-map))
      (link_flags (:standard --pretty --debug-info --no-inline --source-map))))
  (release
    (js_of_ocaml
      (flags (:standard --no-source-map)))))

(subdir runtest
  (dynamic_include ../gentest/dune.inc))

(subdir gentest
  (rule
   (deps (source_tree ../tests))
   (action
    (with-stdout-to dune.inc (run ../tools/gentest.exe --kind rule ../tests)))))
