(lang dune 3.14)
(version dev)

; Since we want to generate opam files we need to provide informations ;
(generate_opam_files true)

; For plugins and preludes
(using dune_site 0.1)

(name alt-ergo)
(authors "Alt-Ergo developers <alt-ergo@ocamlpro.com>")
(maintainers "Alt-Ergo developers <alt-ergo@ocamlpro.com>")
(source (github OCamlPro/alt-ergo))
; Not specifying bug_reports since it defaults to the github issue page
(homepage "https://alt-ergo.ocamlpro.com/")
(documentation "https://ocamlpro.github.io/alt-ergo")

(using menhir 2.0)

(package
 (name alt-ergo)
 (synopsis "The Alt-Ergo SMT prover")
 (description "\
Alt-Ergo is an automatic theorem prover of mathematical formulas. It was developed at LRI, and is now maintained at OCamlPro.

See more details on https://alt-ergo.ocamlpro.com/")
 (depends
  (ocaml (>= 4.08.1))
  dune
  (alt-ergo-lib (= :version))
  (alt-ergo-parsers (= :version))
  menhir
  dune-site
  (cmdliner (>= 1.1.0))
  (odoc :with-doc)
 )

 (sites (share preludes) (lib plugins))
)

(package
 (name alt-ergo-parsers)
 (synopsis "The Alt-Ergo SMT prover parser library")
 (description "\
This is the parser library used in the Alt-Ergo SMT solver.

Alt-Ergo is an automatic theorem prover of mathematical formulas. It was developed at LRI, and is now maintained at OCamlPro.

See more details on http://alt-ergo.ocamlpro.com/"
 )
 (license "LicenseRef-OcamlPro-Non-Commercial")

 (depends
  (ocaml (>= 4.08.1))
  dune
  (alt-ergo-lib (= :version))
  (psmt2-frontend (>= 0.4))
  menhir
  stdlib-shims
  (odoc :with-doc)
 )
)

(package
 (name alt-ergo-lib)
 (synopsis "The Alt-Ergo SMT prover library")
 (description "\
This is the core library used in the Alt-Ergo SMT solver.

Alt-Ergo is an automatic theorem prover of mathematical formulas. It was developed at LRI, and is now maintained at OCamlPro.

See more details on http://alt-ergo.ocamlpro.com/"
 )
 (license "LicenseRef-OcamlPro-Non-Commercial")

 (depends
  (ocaml (>= 4.08.1))
  dune
  dune-build-info
  (dolmen (>= 0.10))
  (dolmen_type (>= 0.10))
  (dolmen_loop (>= 0.10))
  (ocplib-simplex (>= 0.5.1))
  (zarith (>= 1.11))
  seq
  (fmt (>= 0.9.0))
  stdlib-shims
  (ppx_blob (>= 0.7.2))
  ppx_deriving
  (camlzip (>= 1.07))
  (odoc :with-doc)
  ppx_deriving
  (qcheck (and :with-test (= 0.22)))
 )
 (conflicts
  (ppxlib (< 0.30.0))
  (result (< 1.5))
 )
)

(package
 (name alt-ergo-plugin-ab-why3)
 (synopsis "An experimental Why3 frontend for Alt-Ergo")
 (description "\
An experimental front-end that parses a subset of Why3's logic. More
precisely, this front-end targets proof obligations generated by the
Atelier-B framework in Why3 format. It should be used with a prelude
defining the B Set theory.")
 (license "LGPL-2.1-only")

 (depends
  (alt-ergo (= :version))
  (alt-ergo-lib (= :version))
  (alt-ergo-parsers (= :version))))
