(env
 (dev ;; This profil is used (default) to dev without optimisation and blocking warnings.
  (flags
   (:standard -bin-annot -w -22 -warn-error -A))
  (ocamlopt_flags -g))
 (warnings ;; This profile can be used to simply enable all warnings.
  (flags
   (:standard -bin-annot -w +A -warn-error -A))
  (ocamlopt_flags -g))
 (release ;; The release profile has optimizations enabled.
  (flags
   (:standard -bin-annot))
  (ocamlopt_flags -O3 -unbox-closures))
)
