(cram
 (package alt-ergo)
 (deps %{bin:alt-ergo}))

(subdir run
  (dynamic_include ../generate/dune.inc))

(subdir generate
  (rule
   (deps (source_tree ../input))
   (action
    (with-stdout-to dune.inc (run ../../tools/gentest.exe ../input)))))

(test
 (package alt-ergo-lib)
 (name bitvec_tests)
 (modules bitvec_tests)
 (libraries alt-ergo-lib qcheck zarith))
