(documentation
 (package alt-ergo-parsers))

(ocamllex (modules native_lexer))

(menhir
 (infer true)
 (flags --fixed-exception)
 (modules native_parser)
)

(library
 (name AltErgoParsers)
 (public_name alt-ergo-parsers)
 (libraries
   dynlink
   psmt2-frontend
   alt-ergo-lib
   stdlib-shims)
 (modules
   ; common
   Parsers
   ; psmt2
   Psmt2_to_alt_ergo
   ; AE format
   Native_lexer Native_parser)
)
