(install
  (package alt-ergo)
  (section (site (alt-ergo preludes)))
  (files
    fpa-theory-2017-01-04-16h00.ae
    fpa-theory-2019-06-14-11h00.ae
    fpa-theory-2019-10-08-19h00.ae
  )
)

(cram
 (alias runtest-ci)
 (deps fpa-theory-2017-01-04-16h00.ae fpa-theory-2019-06-14-11h00.ae fpa-theory-2019-10-08-19h00.ae))
