(documentation
  (package alt-ergo)
    (mld_files :standard)
)

(ocamllex (modules why3_lexer))

(menhir
  (flags    --fixed-exception)
  (modules  why3_parser)
)

(library
  (name       ABWhy3Plugin)
  (libraries  alt-ergo-lib alt-ergo-parsers)
  (modules    Why3_lexer Why3_parser Why3_loc Why3_ptree)
)

(install
  (package alt-ergo)
  (section lib)
  (files
    (ABWhy3Plugin.cma as plugins/AB-Why3-plugin.cma)
    (ABWhy3Plugin.cmxs as plugins/AB-Why3-plugin.cmxs)
  )
)
