(documentation
  (package alt-ergo)
    (mld_files :standard)
)

(library
  (name       FmSimplexPlugin)
  (libraries  alt-ergo-lib)
  (modules    Simplex Simplex_cache FmSimplexIneqs)
)

(install
  (package alt-ergo)
  (section lib)
  (files
    (FmSimplexPlugin.cma as plugins/fm-simplex-plugin.cma)
    (FmSimplexPlugin.cmxs as plugins/fm-simplex-plugin.cmxs)
  )
)
